<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dictionairisk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="availableWordSets">Available words sets</string>
    <string name="downloadWordSet">Download words set</string>
    <string name="createWordSet">Create words set</string>
    <string name="learningResults">Learning results</string>
    <string name="options">Options</string>
    <string name="learn">Learn</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_word">Edit word</string>
    <string name="is_it_translated_right">Is it translated right?</string>
    <string name="some_foreign_word">Foreign word</string>
    <string name="some_translation">Translation</string>
    <string name="score">Score: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name_your_word_set">Name words set</string>
    <string name="type_title_here">Type title here</string>
    <string name="save">Save</string>
    <string name="saved">saved</string>
    <string name="excellent_score">Excellent! Score: +1</string>
    <string name="not_that_case">Score: -1 Answer is: </string>
    <string name="creation_of_a_set">Creation of a set: </string>
    <string name="save_word">Save word</string>
    <string name="save_word_set">Save words set</string>
    <string name="new_word_set_created">New words set created!</string>
    <string name="ok">OK</string>
    <string name="incorrect_value">Incorrect value!</string>
    <string name="word_pair_saved">Words pair saved</string>
    <string name="edit_words_set">Edit words set</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="add_word">Add word</string>
    <string name="rename">Rename set</string>
    <string name="new_word">New word</string>
    <string name="no_wordsSets">No words sets found. Create a new words set?</string>
    <string name="no_delete_two_words">Cannot delete when words set contains only two words</string>
    <string name="help">Help</string>
    <string name="no_sets_opened">No one words set opened</string>
    <string name="empty_title_not_allowed">Empty title not allowed</string>
    <string name="only_one_element">Word set cannot contain only one word</string>
    <string name="no_words_in_set">Word set cannot contain no words</string>
    <string name="download_properties">Download Properties</string>
    <string name="Language_properties">Language properties</string>
    <string name="download_Translations">Enter words and download the translations</string>
    <string name="select_Collection">Select ready collection</string>
<!--    <string name="update_Languages">Update Available Languages</string> -->
    <string name="download_content_properties">Content properties</string>
    <string name="lets_go">Let\u0027s go!</string>
    <string name="selectYourLanguage">Select your language</string>
    <string name="selectLanguageToLearn">Select language to learn</string>
    <string name="For">For:_</string>
    <string name="loading_languages">Loading available languages</string>
    <string name="downloading_languages">Downloading available languages</string>
    <string name="error_downloading_languages">Error during downloading languages</string>
    <string name="defineWordsToDownloadTranslations">Define words to download translations</string>
    <string name="send">Send</string>
    <string name="enterWordHere">Enter word here:</string>
    <string name="wordAdded">Word Added</string>
    <string name="enterTranslationToDownloadForeignWord">Enter translation? to download foreign word</string>

    <string-array name="howToTitles">
        <item>Open words set</item>
        <item>Create words set</item>
        <item>Edit words set</item>
        <item>Delete words set</item>
        <item>Rename words set</item>
        <item>Add a word</item>
        <item>Edit a word</item>
        <item>Delete a word</item>
    </string-array>
    <string-array name="howToContent">
        <item>Press android menu button and select -Available words sets- menu item.
            Then click words set title you want to learn.
        </item>
        <item>Press android menu button and select -Create words set- menu item.
            Then give your new words set a title and press -save- button.
            Then you may create words pairs or rename words set.
            Press -Save words set- after setting all words pairs you want.
        </item>
        <item>Press android menu button and select -Available words sets- menu item.
            Then long click on set title you want to edit until you will see context menu.
            Select -edit- menu item.
        </item>
        <item>Press android menu button and select -Available words sets- menu item.
            Then long click on set title you want to edit until you will see context menu.
            Select -delete- menu item.
        </item>
        <item>Press android menu button and select -Available words sets- menu item.
            Then long click on set title you want to edit until you will see context menu.
            Select -edit- menu item. Then press -Rename set- button
        </item>
        <item>Press android menu button and select -Available words sets- menu item.
            Then long click on set title you want to edit until you will see context menu.
            Select -edit- menu item. Then click on -New word- button
        </item>
        <item>Press android menu button and select -Available words sets- menu item.
            Then long click on set title you want to edit until you will see context menu.
            Select -edit- menu item. Then click on word you want to edit.
        </item>
        <item>Press android menu button and select -Available words set- menu item.
            Then long click on set title you want to edit until you will see context menu.
            Select -edit- menu item. Then long click on word you want to delete until you will see context menu open.
            Click on delete menu item.
        </item>
    </string-array>
</resources>
