<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffba42">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/edit_word"
              android:gravity="center"
              android:background="#ffff902b"
              android:id="@+id/title"
              android:textSize="20sp"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/title">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/some_foreign_word"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/foreignWordTV"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="test foreign"
            android:gravity="center"
            android:background="#ffffa701"
            android:id="@+id/foreignWordET"
            android:layout_below="@+id/foreignWordTV" />
    <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/some_translation"
            android:textSize="20sp"
            android:id="@+id/translationTV"
            android:layout_below="@+id/foreignWordET"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:gravity="center"
            android:background="#ffffa701"
            android:text="test translation"
            android:id="@+id/translationET"
            android:layout_below="@+id/translationTV" />
    <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save_word"
            android:textSize="20sp"
            android:background="#ffde6f09"
            android:id="@+id/btnSaveEditedWord"
            android:layout_alignParentBottom="true"/>
</RelativeLayout>
</LinearLayout>