<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background">
<RelativeLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:id="@+id/rlWTD"
                android:background="@color/background">
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tvDownloadWordsTitle"
        android:layout_height="wrap_content"
        android:text="@string/defineWordsToDownloadTranslations"
        android:gravity="center"
        android:background="@color/header"
        android:textSize="20sp"/>

    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/lvDownloadWordsSet"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@+id/tvDownloadWordsTitle"
        android:cacheColorHint="@color/background"
        android:background="@color/background"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll1wtd"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llwtd2">
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnNewWord"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:text="@string/add_word"
        android:layout_height="50dp"
        android:layout_above="@+id/btnSend"
        android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llwtd2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnSave"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:text="@string/save"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:textSize="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnSend"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:text="@string/send"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>
